--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 header{
 backgrud-color: #383d58; 
 color: white;}
+*{margin; 0:border:
+padding: 0;}
+
+ .cabedalho {
+     background-color: #383d58;
+       color:white;
+          display:flex;
+            jutify-content: space-around;
+              padding: 24px 0;}
+ .cabedalho-lista-item{
+       display: inline-block;
+                margin: 0 16px;
+                   padding: 24px 0;
+                       font-size: 24px;}             
